observability/tracetest/tracetest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracetest-ingress
  namespace: "default"
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - http:
        paths:
          - path: /tracetest
            pathType: Prefix
            backend:
              service:
                name: tracetest
                port:
                  number: 11633
